added a couple of web elements

--- a/index.html
+++ b/index.html
@@ -5,12 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pyroshock Studios Vof.</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="redirector.js"></script>
 </head>
+<style>
+  button.bigbutton {
+      font-family:'Sui Generis';
+      font-size:xx-large;
+      color:black;
+      background-color:aqua;
+      border:0px;
+      border-radius: 5px;
+      width:70%;
+      height:50px;
+  }
+  
+button.bigbutton:hover {
+    background-color:rgb(0, 157, 255);
+}
+</style>
 <body>
-    <h1 style="text-alignment:center;">
-      Welkom
-      Welcome
-      Bem Vindo
-    </h1>
+  <div style="text-align:center;">
+    <h1 style="font-family: Arial, Helvetica, sans-serif;">Welkom Welcome Bem Vindo</h1>
+   <div style="text-align:center;">
+      <h1 style="font-family: Arial, Helvetica, sans-serif; font-style: italic";>This website is work in progress</h1>
+  </div>
+
+    <br>
+    <div style="text-align:center;">
+      <h1>Who are we?</h1>
+      <p>
+        We are a software and game development company, founded in The Netherlands 
+      </p>
+    </div>
+    <br>
+    <div style="text-align:center;">
+      <button class="bigbutton" onclick="gotoPageOurProjects()">Our projects</button>
+    </div>
 </body>
 </html>
