--- a/index.html
+++ b/index.html
@@ -4,34 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pyroshock Studios Vof.</title>
+    <title>V.O.F. Pyroshock Studios</title>
     <link rel="stylesheet" href="style.css">
     <script src="redirector.js"></script>
 </head>
 <style>
-  button.bigbutton {
-      font-family:'Sui Generis';
-      font-size:xx-large;
-      color:black;
-      background-color:aqua;
-      border:0px;
-      border-radius: 5px;
-      width:70%;
-      height:50px;
-  }
-  
-button.bigbutton:hover {
-    background-color:rgb(0, 157, 255);
-}
 </style>
 <body>
   <div style="text-align:center;">
     <h1 style="font-family: Arial, Helvetica, sans-serif;">Welkom Welcome Bem Vindo</h1>
-   <div style="text-align:center;">
+   <header style="text-align:center;">
       <h1 style="font-family: Arial, Helvetica, sans-serif; font-style: italic";>This website is work in progress</h1>
-  </div>
-
-    <br>
+  </header>
+    <hr>
+  <main>
     <div style="text-align:center;">
       <h1>Who are we?</h1>
       <p>
@@ -39,8 +25,10 @@ button.bigbutton:hover {
       </p>
     </div>
     <br>
-    <div style="text-align:center;">
       <button class="bigbutton" onclick="gotoPageOurProjects()">Our projects</button>
-    </div>
+  </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
