--- a/our_projects.html
+++ b/our_projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pyroshock Studios Vof.</title>
+    <title>Projects | Pyroshock Studios</title>
     <link rel="stylesheet" href="style.css">
     <script src="redirector.js"></script>
 </head>
@@ -12,31 +12,30 @@
   div.innerdiv {
     flex:content;
     flex-direction: column;
-    background-color: rgb(121, 157, 192);
-    color:white;
-    border-radius: 10px;
   }
- 
 </style>
-<body>
-  <div style="text-align:center;">
+<body  style="text-align:center;">
+  <header>
     <div class="innerdiv">
       <button onclick="gotoPageIndex()">Back</button>
     </div>
+  </header>
+  <main>
     <div class="innerdiv">
-      <h1>Shard3D Engine 1.0</h1>
+      <a href="https://github.com/ZilverBlade/Shard3DDocs" target="_blank">
+        <h1>Shard3D Engine 1.0</h1>
+      </a>
       <p>
         A high performance proprietary game engine designed for our games. <br>
         This engine was created with efficiency and reserach in mind.
       </p>
     </div>
-    <div class="innerdiv">
-      <h1>Derby Heat</h1>
-      <p>
-        A work in progress multiplayer game<br>
-        <a href="http://www.derbyheat.com">www.derbyheat.com</a>
-      </p>
+    <div class="innerdiv" >
+      <a href="http://www.derbyheat.com" target="_blank">
+        <h1>Derby Heat</h1>
+      </a>
+      <p>A work in progress multiplayer game</p>
     </div>
-  </div>
+  </main>
 </body>
 </html>
