--- a/our_projects.html
+++ b/our_projects.html
@@ -21,7 +21,10 @@
     </div>
   </header>
   <main>
-    <div class="innerdiv">
+    <div class="innerdiv styleddiv" style="background-image:url('images/shard3d-banner.png');
+    background-position: center; background-color: #000a; 
+    background-blend-mode: multiply;
+    ">
       <a href="https://github.com/ZilverBlade/Shard3DDocs" target="_blank">
         <h1>Shard3D Engine 1.0</h1>
       </a>
@@ -30,7 +33,7 @@
         This engine was created with efficiency and reserach in mind.
       </p>
     </div>
-    <div class="innerdiv" >
+    <div class="innerdiv styleddiv" >
       <a href="http://www.derbyheat.com" target="_blank">
         <h1>Derby Heat</h1>
       </a>
