--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>V.O.F. Pyroshock Studios</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="images/png" href="icons/logo_icon_32.png">
     <script src="redirector.js"></script>
 </head>
 <style>
@@ -40,7 +41,8 @@
     animation-delay: 4s;
   }
 </style>
-<body style="text-align:center;">
+<body style="text-align:center; background-image: url(images/logo.png);
+    background-repeat: no-repeat; background-position: 50%; background-size: 50%;">
   <div class="styleddiv">
     <div class="flexCenter" style="font-family: Arial, Helvetica, sans-serif;">
       <div class="fadingtext" id="hellofase0"><h1>Welkom</h1></div>
@@ -53,22 +55,22 @@
     </header>
     <hr>
     <main>
-      <div class="greydiv">
+      <section class="greydiv">
         <h1>Who are we?</h1>
         <p>
           We are a software and game development company, founded in The Netherlands 
         </p>
         <br>
         <button class="bigbutton" onclick="alert('Sorry, this page is missing!')">About Us</button>
-      </div>
-      <div class="greydiv">
+      </section>
+      <section class="greydiv">
         <h1>What is our job?</h1>
         <p>
           We do private software contracts and develop games
         </p>
         <br>
         <button class="bigbutton" onclick="gotoPageOurProjects()">Our projects</button>
-      </div>
+      </section>
     </main>
     <hr>
     <footer class="greydiv" style="flex:content; flex-direction: row;">
