added contact email and added icon for derby heat

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
       <a target="_blank" href="https://x.com/PShockStudios"><img src="icons/x_dot_com.png" class="socialsIcon" alt="x.com"></a>
       <a target="_blank" href="https://www.instagram.com/pyroshockstudios/"><img src="icons/instagram.webp" class="socialsIcon" alt="Instagram"></a>
       <a target="_blank" href="https://facebook.com/pyroshockstudios"><img src="icons/facebook.webp" class="socialsIcon" alt="Facebook"></a>
+      <h2>Contact Us (Buisness only)</h2>
+      <a href="mailto:contact@pyroschockstudios.com">contact@pyroschockstudios.com</a>
     </footer>
   </div>
 </body>
