--- a/our_projects.html
+++ b/our_projects.html
@@ -33,7 +33,10 @@
         This engine was created with efficiency and reserach in mind.
       </p>
     </div>
-    <div class="innerdiv styleddiv" >
+    <div class="innerdiv styleddiv" style="background-image:url('images/Derbyheatlogo.jpg');
+    background-position: center; background-repeat: no-repeat; background-color: #000a; 
+    background-blend-mode: multiply;
+    ">
       <a href="http://www.derbyheat.com" target="_blank">
         <h1>Derby Heat</h1>
       </a>
