--- a/404.html
+++ b/404.html
@@ -8,4 +8,5 @@
 </head>
 <body>
     <h1>404 not found</h1>
+    <div class="tenor-gif-embed" data-postid="18059923" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/stick-bug-stick-bugged-bug-dancing-bug-dancing-gif-18059923">Stick Bug Stick Bugged GIF</a>from <a href="https://tenor.com/search/stick+bug-gifs">Stick Bug GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 </body>
