--- a/gpu_cheat_sheet.html
+++ b/gpu_cheat_sheet.html
@@ -11,17 +11,14 @@
 </head>
 <style>
 </style>
-<body style="
-  text-align: center;
-  position: relative;
-  background-color: white;
-">
+<body style="text-align:center; background-image: none;
+    background-repeat: no-repeat; background-position: 50%; background-size: 50%; color:white;">
       <div style="
         position: fixed;
         inset: 0;
         background: url('images/logo.png') no-repeat 50% 50%;
         background-size: 50%;
-        opacity: 0.2;
+        opacity: 0.1;
         pointer-events: none; 
         z-index: -1;
       "></div>
@@ -68,7 +65,7 @@
     <td>Kaby Lake / Coffee Lake (Gen 9 / 9.5)</td>
     </tr>
     <tr>
-    <td><strong>GTX 16 Series + RTX 20 Series (incl. SUPER)</strong></td>
+    <td><strong>GTX 16 Series + RTX 20 Series</strong></td>
     <td>Turing</td>
     <td>2018–2019</td>
     <td><strong>RX 5000 Series</strong></td>
@@ -139,31 +136,31 @@
     <td>UHD 620 / 630</td>
     <td>7th–8th Gen (Kaby / Coffee Lake, 2016–2018)</td>
     <td>Gen 9 / 9.5</td>
-    <td>GTX 10 → GTX 16 / RTX 20</td>
+    <td>GTX 1000</td>
     </tr>
     <tr>
     <td>Iris Plus G7</td>
     <td>10th Gen (Ice Lake, 2019)</td>
     <td>Gen 11</td>
-    <td>RTX 20</td>
+    <td>GTX 1600 / RTX 2000</td>
     </tr>
     <tr>
     <td>Iris Xe (G7)</td>
     <td>11th Gen (Tiger Lake, 2020)</td>
     <td>Gen 12 (Xe-LP)</td>
-    <td>RTX 30</td>
+    <td>RTX 3000</td>
     </tr>
     <tr>
     <td>Iris Xe (Alder / Raptor Lake)</td>
     <td>12th–13th Gen (2021–2023)</td>
     <td>Xe-LP+</td>
-    <td>RTX 40</td>
+    <td>RTX 4000</td>
     </tr>
     <tr>
     <td>Xe2-LPG</td>
     <td>14th Gen (Lunar Lake, 2025)</td>
     <td>Xe2 (Battlemage)</td>
-    <td>RTX 50</td>
+    <td>RTX 5000</td>
     </tr>
     </tbody>
     </table>
