--- a/gpu_cheat_sheet.html
+++ b/gpu_cheat_sheet.html
@@ -30,9 +30,9 @@
     <th><strong>NVIDIA Generation</strong></th>
     <th><strong>Architecture</strong></th>
     <th><strong>Release Year</strong></th>
-    <th><strong>AMD Equivalent (Desktop GPU)</strong></th>
+    <th><strong>AMD Equivalent</strong></th>
     <th><strong>AMD Architecture</strong></th>
-    <th><strong>Intel Equivalent (iGPU)</strong></th>
+    <th><strong>Intel Equivalent</strong></th>
     <th><strong>Intel Graphics Architecture</strong></th>
     </tr>
     </thead>
@@ -43,7 +43,7 @@
     <td>2012–2013</td>
     <td><strong>HD 7000 / R9 200 Series</strong></td>
     <td>GCN 1.0–1.1</td>
-    <td><strong>Intel HD 4000 / 4600</strong></td>
+    <td><strong>HD 4000 / 4600</strong></td>
     <td>Ivy Bridge / Haswell (Gen 7 / 7.5)</td>
     </tr>
     <tr>
@@ -52,20 +52,20 @@
     <td>2014–2015</td>
     <td><strong>R9 300 / Fury Series</strong></td>
     <td>GCN 1.2</td>
-    <td><strong>Intel HD 5000 / 5200 / 5500 / 6000</strong></td>
+    <td><strong>HD 5000 / 5200 / 5500 / 6000</strong></td>
     <td>Broadwell (Gen 8)</td>
     </tr>
     <tr>
-    <td><strong>GTX 10 Series</strong></td>
+    <td><strong>GTX 1000 Series</strong></td>
     <td>Pascal</td>
     <td>2016–2018</td>
     <td><strong>RX 400 / 500 / Vega Series</strong></td>
     <td>GCN 4 / Vega</td>
-    <td><strong>Intel UHD 620 / 630</strong></td>
+    <td><strong>UHD 620 / 630</strong></td>
     <td>Kaby Lake / Coffee Lake (Gen 9 / 9.5)</td>
     </tr>
     <tr>
-    <td><strong>GTX 16 Series + RTX 20 Series</strong></td>
+    <td><strong>GTX 1600 + RTX 2000 Series</strong></td>
     <td>Turing</td>
     <td>2018–2019</td>
     <td><strong>RX 5000 Series</strong></td>
@@ -74,31 +74,31 @@
     <td>Kaby Lake R / Coffee Lake / Ice Lake (Gen 9.5 → 11)</td>
     </tr>
     <tr>
-    <td><strong>RTX 30 Series</strong></td>
+    <td><strong>RTX 3000 Series</strong></td>
     <td>Ampere</td>
     <td>2020–2022</td>
     <td><strong>RX 6000 Series</strong></td>
     <td>RDNA 2</td>
-    <td><strong>Intel Iris Xe (G7, Xe-LP)</strong></td>
-    <td>Tiger Lake / Alder Lake (Gen 12)</td>
+    <td><strong>A series</strong></td>
+    <td>Xe-HPG</td>
     </tr>
     <tr>
-    <td><strong>RTX 40 Series</strong></td>
+    <td><strong>RTX 4000 Series</strong></td>
     <td>Ada Lovelace</td>
     <td>2022–2024</td>
     <td><strong>RX 7000 Series</strong></td>
     <td>RDNA 3</td>
-    <td><strong>Intel Xe-LPG / Xe-LP+ (Iris Xe refresh)</strong></td>
-    <td>Raptor Lake / Meteor Lake</td>
+    <td><strong>B Series</strong></td>
+    <td>Xe2</td>
     </tr>
     <tr>
-    <td><strong>RTX 50 Series</strong> <em>(current / upcoming)</em></td>
+    <td><strong>RTX 5000 Series</strong> <em>(current / upcoming)</em></td>
     <td>Blackwell</td>
     <td>2025+</td>
     <td><strong>RX 9000 Series</strong></td>
     <td>RDNA 4</td>
-    <td><strong>Intel Xe2-LPG (Lunar Lake)</strong></td>
-    <td>Xe2 (Battlemage iGPU)</td>
+    <td><strong>*C series</strong></td>
+    <td>-</td>
     </tr>
     </tbody>
     </table>
@@ -151,15 +151,15 @@
     <td>RTX 3000</td>
     </tr>
     <tr>
-    <td>Iris Xe (Alder / Raptor Lake)</td>
+    <td>Iris Xe/Xe2 (Alder / Raptor Lake)</td>
     <td>12th–13th Gen (2021–2023)</td>
-    <td>Xe-LP+</td>
+    <td>Xe-LP+/Xe2 (Battlemage)</td>
     <td>RTX 4000</td>
     </tr>
     <tr>
-    <td>Xe2-LPG</td>
-    <td>14th Gen (Lunar Lake, 2025)</td>
-    <td>Xe2 (Battlemage)</td>
+    <td>-</td>
+    <td>Ulta Gen 1 (Lunar Lake, 2025)</td>
+    <td>-</td>
     <td>RTX 5000</td>
     </tr>
     </tbody>
