--- a/our_projects.html
+++ b/our_projects.html
@@ -30,7 +30,14 @@
       </a>
       <p>
         A high performance proprietary game engine designed for our games. <br>
-        This engine was created with efficiency and reserach in mind.
+        This engine was created with efficiency and research in mind.
+      </p>
+    </div>
+    <div class="innerdiv styleddiv" style="">
+      <a href="about:blank" target="_blank">
+        <h1>ShockwaveEngine</h1>
+      </a>
+      <p>
       </p>
     </div>
     <div class="innerdiv styleddiv" style="background-image:url('images/Derbyheatlogo.jpg');
@@ -41,6 +48,24 @@
         <h1>Derby Heat</h1>
       </a>
       <p>A work in progress multiplayer game</p>
+    </div>
+    <div class="innerdiv styleddiv" style="background-image:url('images/PyroRHI.png');
+    background-position: center; background-repeat: no-repeat; background-color: #000a; 
+    background-blend-mode: multiply;
+    ">
+      <a href="https://github.com/PyroshockStudios/PyroRHI" target="_blank">
+        <h1>PyroRHI</h1>
+      </a>
+      <p>A high performance low level desktop RHI abstraction, used in Shard3D</p>
+    </div>
+    <div class="innerdiv styleddiv" style="background-image:url('images/PyroRHI.png');
+    background-position: center; background-repeat: no-repeat; background-color: #000a; 
+    background-blend-mode: multiply;
+    ">
+      <a href="https://github.com/PyroshockStudios/Shockgraph" target="_blank">
+        <h1>ShockGraph (Shockwave Rendergraph)</h1>
+      </a>
+      <p>A scalable and high performance render graph abstraction, based on PyroRHI, used in Shard3D</p>
     </div>
   </main>
 </body>
