--- a/index.html
+++ b/index.html
@@ -1,86 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>V.O.F. Pyroshock Studios</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="images/png" href="icons/logo_icon_32.png">
-    <script src="redirector.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>V.O.F. Pyroshock Studios</title>
+  <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="components.css">
+  <link rel="stylesheet" href="page-home.css">
+  <link rel="icon" type="images/png" href="icons/logo_icon_32.png">
+  <script src="scripts/redirector.js" defer></script>
+  <script src="scripts/main.js" defer></script>
 </head>
-<style>
-  @keyframes example {
-    0%   { opacity: 100%;}
-    20% { opacity: 100%;}
-    30% { opacity: 0%;}
-    90% { opacity: 0%;}
-    100% { opacity: 100%;}
-  }
-  div.flexCenter {
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    text-align: center;
-  }
-  .fadingtext {
-    position:absolute;
-    top: 0px;
-    animation-name: example;
-    animation-duration: 6s;
-    animation-iteration-count: infinite;
-    opacity:0%;
-  }
-  div#hellofase0 {
-    animation-delay: 0s;
-  }
-  div#hellofase1 {
-    animation-delay: 2s;
-  }
-  div#hellofase2 {
-    animation-delay: 4s;
-  }
-</style>
-<body style="text-align:center; background-image: url(images/logo.png);
-    background-repeat: no-repeat; background-position: 50%; background-size: 50%;">
-  <div class="styleddiv">
-    <div class="flexCenter" style="font-family: Arial, Helvetica, sans-serif;">
-      <div class="fadingtext" id="hellofase0"><h1>Welkom</h1></div>
-      <div class="fadingtext" id="hellofase1"><h1>Welcome</h1></div>
-      <div class="fadingtext" id="hellofase2"><h1>Bem Vindo</h1></div>
-    </div>
-    <br><br>
-    <header>
-      <h1 style="font-family: Arial, Helvetica, sans-serif; font-style: italic";>This website is work in progress</h1>
-    </header>
-    <hr>
-    <main>
-      <section class="greydiv">
-        <h1>Who are we?</h1>
-        <p>
-          We are a software and game development company, founded in The Netherlands 
-        </p>
+<body class="home-body">
+  <header class="hero">
+    <img src="images/logo.png" alt="Pyroshock Studios Logo" class="hero-logo">
+    <p class="subtitle">PYROSHOCK STUDIOS - Through fire and flames</p>
+  </header>
+
+  <main>
+    <div class="info-container">
+      <section class="info-card">
+        <h2>Who are we?</h2>
+        <p>We are a software and game development company, founded in The Netherlands</p>
         <br>
-        <button class="bigbutton" onclick="alert('Sorry, this page is missing!')">About Us</button>
+        <button class="bigbutton" onclick="gotoPageAbout()">About Us</button>
       </section>
-      <section class="greydiv">
-        <h1>What is our job?</h1>
-        <p>
-          We do private software contracts and develop games
-        </p>
+
+      <section class="info-card">
+        <h2>What is our job?</h2>
+        <p>We do private software contracts and develop games</p>
         <br>
         <button class="bigbutton" onclick="gotoPageOurProjects()">Our projects</button>
       </section>
-    </main>
-    <hr>
-    <footer class="greydiv" style="flex:content; flex-direction: row;">
-      <h2>Our Socials</h2>
-      <a target="_blank" href="https://x.com/PShockStudios"><img src="icons/x_dot_com.png" class="socialsIcon" alt="x.com"></a>
-      <a target="_blank" href="https://www.instagram.com/pyroshockstudios/"><img src="icons/instagram.webp" class="socialsIcon" alt="Instagram"></a>
-      <a target="_blank" href="https://facebook.com/pyroshockstudios"><img src="icons/facebook.webp" class="socialsIcon" alt="Facebook"></a>
-      <h2>Contact Us (Buisness only)</h2>
-      <a href="mailto:contact@pyroschockstudios.com">contact@pyroschockstudios.com</a>
-    </footer>
-  </div>
+    </div>
+  </main>
+
+  <div data-include="includes/page-footer.html"></div>
 </body>
 </html>
