--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="home-body">
   <header class="hero">
     <img src="images/logo.png" alt="Pyroshock Studios Logo" class="hero-logo">
-    <p class="subtitle">PYROSHOCK STUDIOS - Through fire and flames</p>
+    <p class="subtitle">PYROSHOCK STUDIOS - Through fire and waves</p>
   </header>
 
   <main>
