--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="home-body">
   <header class="hero">
     <img src="images/logo.png" alt="Pyroshock Studios Logo" class="hero-logo">
-    <p class="subtitle">PYROSHOCK STUDIOS - Through fire and waves</p>
+    <p class="title">PYROSHOCK STUDIOS</p>
   </header>
 
   <main>
@@ -36,6 +36,6 @@
     </div>
   </main>
 
-  <div data-include="includes/page-footer.html"></div>
+  <div data-include="includes/footer.html"></div>
 </body>
 </html>
