--- a/page-about.html
+++ b/page-about.html
@@ -13,7 +13,7 @@
   <script src="scripts/main.js" defer></script>
 </head>
 <body>
-  <div data-include="includes/page-header.html"></div>
+  <div data-include="includes/header.html"></div>
 
   <main class="content-container">
     <h1>About Pyroshock Studios</h1>
@@ -29,14 +29,14 @@
     <section class="about-section">
       <h2>Our Mission</h2>
       <p>
-        Our goal is to make efficiency and <em>fun</em> the standard, and not a luxury,<br/>
-		    To bring the market back to the consumer,<br/>
-        To fight against planned obselecense,<br/>
-		    And we do this by providing private software contracts, delivering custom solutions for clients, and
+        We want to make efficiency and <em>fun</em> the standard, and not a luxury,<br/>
+		    We want to bring the market back to the consumer,<br/>
+        We want to fight against planned obselecense,<br/>
+		    And right now, we are starting by providing private software contracts, delivering custom solutions for clients, and
         developing our own in-house game titles like <a href="http://www.derbyheat.com" target="_blank">Derby Heat</a>. 
-        We are driven by efficiency, research, and a passion for quality, which is why we build 
+        Efficiency, research, and a passion for quality is what we are, which is why we build 
         our own tools like the <a href="https://github.com/ZilverBlade/Shard3DDocs" target="_blank">Shard3D Engine</a>.<br/>
-		    But we also want to share our efforts, and give back to the developers, and inspire them to follow our footsteps in making a change, 
+		    But we also want to share our efforts, and give access to efficient libraries to the developer, and inspire them to follow our footsteps in making a change, 
 		    which is why we provide open source libraries like <a href="https://github.com/PyroshockStudios/Shockgraph" target="_blank">ShockGraph</a> which has been
 		    extensively tested and designed to provide a wide range of compatibility, ease of access, and performance.
       </p>
@@ -49,12 +49,12 @@
       <div class="team-container">
         <div class="team-member-card">
           <h3>Tristan A. W. D. Fransen</h3>
-          <p><em>(19) Lead Developer / Founder</em></p>
+          <p><em>(<span class="calculate-age" data-dob="20061023"></span>) Lead Developer / Founder</em></p>
           <p>2nd year Computer Science bachelor student, with a high passion for perfection and excellence.</p>
         </div>
         <div class="team-member-card">
           <h3>Tyrese Jerome Ferreira</h3>
-          <p><em>(22) Game Developer / Co-Founder</em></p>
+          <p><em>(<span class="calculate-age" data-dob="20031011"></span>) Game Developer / Co-Founder</em></p>
           <p>Computer Science graduate, experience in creating and releasing games.</p>
         </div>
         </div>
@@ -62,6 +62,6 @@
 
   </main>
 
-  <div data-include="includes/page-footer.html"></div>
+  <div data-include="includes/footer.html"></div>
 </body>
 </html>
