--- a/page-our-projects.html
+++ b/page-our-projects.html
@@ -12,7 +12,7 @@
   <script src="scripts/main.js" defer></script>
 </head>
 <body>
-  <div data-include="includes/page-header.html"></div>
+  <div data-include="includes/header.html"></div>
   
   <main class="project-grid">
     <div class="project-card" style="background-image:url('images/shard3d-banner.png');">
@@ -26,7 +26,7 @@
       <a href="about:blank" target="_blank">
         <h3>ShockwaveEngine</h3>
       </a>
-      <p> (Add description here) </p>
+      <p>Our next-gen game engine, designed for the future<br/><span class="weak-text"><em>(Currently not ready for public showcase)</em></span></p>
     </div>
 
     <div class="project-card" style="background-image:url('images/Derbyheatlogo.jpg');">
@@ -52,6 +52,6 @@
 
   </main>
   
-  <div data-include="includes/page-footer.html"></div>
+  <div data-include="includes/footer.html"></div>
 </body>
 </html>
